@@ -1,6 +1,6 @@
 /* This file is part of the KDE project
 
-   Copyright (C) 2004 Dario Massarin <nekkar@libero.it>
+   Copyright (C) 2005 Dario Massarin <nekkar@libero.it>
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public
@@ -16,28 +16,48 @@
 #include <kiconloader.h>
 #include <kimageeffect.h>
 #include <kiconeffect.h>
+#include <kdebug.h>
 
 #include "sidebar.h"
 
-SidebarItem::SidebarItem( QWidget * parent, Sidebar * sidebar )
-    : QWidget( parent ),
+
+SidebarItem::SidebarItem( Sidebar * sidebar )
+    : QListBoxItem( ),
       m_sidebar(sidebar),
       m_showChildren( true ),
-      m_isSelected( false )
+      m_isVisible( true )
 {
-    setFixedSize(200, 37);
-
+    setCustomHighlighting(true);
     m_childItems = new QValueList<SidebarItem *>();
-    m_sidebar->m_items.push_back(this);
+}
 
-    connect(this,      SIGNAL(selected(SidebarItem *)),
-            m_sidebar, SLOT(slotItemSelected(SidebarItem *)) );
+int SidebarItem::height(const QListBox * lb) const
+{
+    if(m_isVisible)
+        return 38;
+    else
+        return 0;
+}
+
+int SidebarItem::width(const QListBox * lb) const
+{
+    return lb->width();
 }
 
 void SidebarItem::addChild( SidebarItem * child )
 {
+    if(m_childItems->empty())
+        m_sidebar->insertItem( child, this );
+    else 
+        m_sidebar->insertItem( child, m_childItems->last() );
+
     m_childItems->push_front(child);
-    child->setShown( m_showChildren );
+}
+
+void SidebarItem::removeChild( SidebarItem * child )
+{
+    m_sidebar->removeItem(m_sidebar->index(child));
+    m_childItems->remove(child);
 }
 
 void SidebarItem::setText( const QString& text )
@@ -52,137 +72,149 @@ void SidebarItem::showChildren( bool show )
 
     for(; it!=itEnd; it++)
     {
-        (*it)->setShown( show );
+        (*it)->setVisible(show);
     }
 }
 
-void SidebarItem::setSelected( bool selected )
+void SidebarItem::select()
 {
-    if( m_isSelected != selected )
+    showChildren(m_showChildren = !m_showChildren);
+}
+
+void SidebarItem::setVisible(bool visible)
+{
+    m_isVisible = visible;
+}
+
+void SidebarItem::paint ( QPainter * p)
+{
+    //this is used to handle a change in the color scheme, but keeping
+    //the pixmaps cached
+    static QColor * prevHighlight = 0;
+
+    static QPixmap topGradient;
+    static QPixmap bottomGradient;
+
+    if( (prevHighlight == 0) ||
+        (m_sidebar->palette().active().highlight() != *prevHighlight))
     {
-        m_isSelected = selected;
-        repaint(); 
+        topGradient = QPixmap(
+            KImageEffect::gradient( 
+            QSize( 1, 5 ),
+            m_sidebar->palette().active().highlight().light(150),
+            m_sidebar->palette().active().highlight(),
+            KImageEffect::VerticalGradient ) );
+
+        bottomGradient = QPixmap(
+            KImageEffect::gradient( 
+            QSize( 1, 5 ),
+            m_sidebar->palette().active().highlight(),
+            m_sidebar->palette().active().highlight().light(150),
+            KImageEffect::VerticalGradient ) );
+
+        if(!prevHighlight)
+            prevHighlight = new QColor(m_sidebar->palette().active().highlight());
     }
-}
 
-void SidebarItem::mouseDoubleClickEvent ( QMouseEvent * e )
-{
-    showChildren( m_showChildren=!m_showChildren );
-    repaint();
-    emit( selected(this) );
-}
+    int w = width(m_sidebar);
+    int h = height(m_sidebar);
 
-void SidebarItem::mousePressEvent ( QMouseEvent * e )
-{
-    emit( selected(this) );
-}
-
-void SidebarItem::paintEvent ( QPaintEvent * p)
-{
-    QPainter pt(this);
-
-    static QPixmap * topGradient = new QPixmap(
-            KImageEffect::gradient( 
-            QSize( 1, 5 ),
-            palette().active().highlight().light(150),
-            palette().active().highlight(),
-            KImageEffect::VerticalGradient ) );
-
-    static QPixmap * bottomGradient = new QPixmap(
-            KImageEffect::gradient( 
-            QSize( 1, 5 ),
-            palette().active().highlight(),
-            palette().active().highlight().light(150),
-            KImageEffect::VerticalGradient ) );
-
-    if(!m_isSelected)
-        pt.fillRect(0,0,width(),height(), QBrush(Qt::white));
+    if(!isSelected())
+        p->fillRect(0,0,w,h, QBrush(m_sidebar->palette().active().light()));
     else
     {
-        pt.fillRect(0,5,width(), height()-5-4, palette().active().highlight());
-        pt.drawTiledPixmap(0,0, width(), 5, *topGradient);
-        pt.drawTiledPixmap(0,height()-4, width(), 4, *bottomGradient);
-        pt.setPen(QPen(palette().active().highlight().dark(130),1));
-        pt.drawLine(0,0,width(), 0);
-        pt.drawLine(0,height()-1,width(), height()-1);
+        QColor c = m_sidebar->palette().active().highlight();
+
+        p->fillRect(0,5,w, h-5-4, c);
+        p->drawTiledPixmap(0,0, w, 5, topGradient);
+        p->drawTiledPixmap(0,h-4, w, 4, bottomGradient);
+        p->setPen(QPen(c.dark(130),1));
+        p->drawLine(0,0,w, 0);
+        p->drawLine(0,h-1,w, h-1);
     }
+    (*prevHighlight)=m_sidebar->palette().active().highlight();
 }
 
-DownloadsFolder::DownloadsFolder( QWidget * parent, Sidebar * sidebar )
-    : SidebarItem( parent, sidebar )
+DownloadsFolder::DownloadsFolder( Sidebar * sidebar )
+    : SidebarItem( sidebar )
 {
 
 }
 
-void DownloadsFolder::paintEvent ( QPaintEvent * p )
+void DownloadsFolder::paint ( QPainter * p )
 {
-    SidebarItem::paintEvent(p);
-
-    QPainter pt(this);
+    SidebarItem::paint(p);
 
     QPixmap icon = DesktopIcon("folder", 32);
 
-    if(m_isSelected)
+    if(isSelected())
     {
         QImage  img = DesktopIcon("folder", 32).convertToImage();
         KIconEffect::toGamma(img, 0);
-        pt.drawPixmap(10, 2, QPixmap(img));
+        p->drawPixmap(10, 2, QPixmap(img));
     }
      else
     {
-        pt.drawPixmap(10, 2, icon);
+        p->drawPixmap(10, 2, icon);
     }
 
     if(m_showChildren)
-        pt.drawPixmap(25, 20, SmallIcon("edit_remove", 16));
+        p->drawPixmap(25, 20, SmallIcon("edit_remove", 16));
     else
-        pt.drawPixmap(25, 20, SmallIcon("edit_add", 16));
+        p->drawPixmap(25, 20, SmallIcon("edit_add", 16));
 
-    QFont f(pt.font());
+    QFont f(p->font());
     f.setBold(true);
-    pt.setFont( f );
-    pt.drawText(50, 11, width(), height()-7, Qt::AlignLeft, m_text);
+    p->setFont( f );
+    p->setPen( m_sidebar->palette().active().foreground());
+    p->drawText(50, 11, width(m_sidebar), height(m_sidebar)-7, Qt::AlignLeft, m_text);
 }
 
-GroupFolder::GroupFolder( QWidget * parent, Sidebar * sidebar )
-    : SidebarItem( parent, sidebar )
+GroupFolder::GroupFolder( Sidebar * sidebar )
+    : SidebarItem( sidebar )
 {
 
 }
 
-void GroupFolder::paintEvent ( QPaintEvent * p )
+void GroupFolder::paint( QPainter * p )
 {
-    SidebarItem::paintEvent(p);
-
-    QPainter pt(this);
+    SidebarItem::paint(p);
 
     QPixmap icon = DesktopIcon("folder", 32);
 
-    if(m_isSelected)
+    if(isSelected())
     {
         QImage  img = DesktopIcon("folder", 32).convertToImage();
         KIconEffect::toGamma(img, 0);
-        pt.drawPixmap(30, 2, QPixmap(img));
+        p->drawPixmap(30, 2, QPixmap(img));
     }
     else
     {
-        pt.drawPixmap(30, 2, icon);
+        p->drawPixmap(30, 2, icon);
     }
 
-    pt.drawText(70, 11, width(), height()-7, Qt::AlignLeft, m_text);
+    p->setPen( m_sidebar->palette().active().foreground());
+    p->drawText(70, 11, width(m_sidebar), height(m_sidebar)-7, Qt::AlignLeft, m_text);
 }
 
 Sidebar::Sidebar( QWidget * parent, const char * name )
-    : QScrollView( parent, name )
+    : QListBox( parent, name )
 {
-    viewport()->setBackgroundMode( Qt::PaletteBase );
+    connect(this, SIGNAL(selected(QListBoxItem *)),
+            this, SLOT(slotItemSelected(QListBoxItem *)));
 
-    m_layout = new QVBox( viewport() );
-    m_layout->setFixedWidth( viewport()->width() );
-    addChild(m_layout);
+    setHScrollBarMode(QScrollView::AlwaysOff);
 
-    m_dItem = new DownloadsFolder(m_layout, this);
+    m_dItem = new DownloadsFolder(this);
     m_dItem->setText(i18n("Downloads"));
+
+    insertItem(m_dItem);
+}
+
+void Sidebar::slotItemSelected(QListBoxItem * item)
+{
+    (static_cast<SidebarItem *>(item))->select();
+    triggerUpdate(true);
 }
 
 void Sidebar::schedulerAddedGroups( const GroupList& list )
@@ -194,7 +226,7 @@ void Sidebar::schedulerAddedGroups( const GroupList& list )
     {
         QString groupName = (*it)->info().name;
 
-        GroupFolder * g = new GroupFolder(m_layout, this);
+        GroupFolder * g = new GroupFolder(this);
         g->setText(groupName);
 
         m_groupsMap[groupName] = g;
@@ -210,19 +242,8 @@ void Sidebar::schedulerRemovedGroups( const GroupList& list )
 
     for(; it != endList; ++it)
     {
-        m_items.remove(m_groupsMap[(*it)->info().name]);
-        delete(m_groupsMap[(*it)->info().name]);
-    }
-}
-
-void Sidebar::slotItemSelected( SidebarItem * item )
-{
-    QValueList<SidebarItem *>::iterator it = m_items.begin();
-    QValueList<SidebarItem *>::iterator endList = m_items.end();
-
-    for( ;it != endList; ++it )
-    {
-        (*it)->setSelected( (*it) == item );
+        m_dItem->removeChild(m_groupsMap[(*it)->info().name]);
+        m_groupsMap.remove((*it)->info().name);
     }
 }
 
